--- a/index.html
+++ b/index.html
@@ -9,10 +9,16 @@
 			rel="stylesheet"
 			integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN"
 			crossorigin="anonymous" />
+		<link rel="stylesheet" href="./assets/css/style.css" />
 	</head>
 	<body>
 		<header></header>
-		<main></main>
+		<main>
+			<div id="lamp">
+				<img id="lamp_white" src="./assets/img/white_lamp.png" alt="white_lamp" />
+				<button id="btn">Accendi</button>
+			</div>
+		</main>
 		<footer></footer>
 		<script src="./assets/js/script.js"></script>
 	</body>
