--- a/index.html
+++ b/index.html
@@ -14,8 +14,8 @@
 	<body>
 		<header></header>
 		<main>
-			<div id="lamp">
-				<img id="lamp_white" src="./assets/img/white_lamp.png" alt="white_lamp" />
+			<div>
+				<img id="lamp" src="./assets/img/white_lamp.png" alt="white_lamp" />
 				<button id="btn">Accendi</button>
 			</div>
 		</main>
